--- a/src/components/ModalCatalog/ModalCatalog.scss
+++ b/src/components/ModalCatalog/ModalCatalog.scss
@@ -1,6 +1,8 @@
 .modalCatalog {
 	position: absolute;
 	width: 100%;
+	max-height: 30rem;
+	overflow: hidden;
 	background-color: #f8f8f8;
 	box-shadow: 0 4px 4px #00000040;
 	z-index: 3;
@@ -39,4 +41,21 @@
 			cursor: pointer;
 		}
 	}
+}
+
+.modalCatalog.entering {
+	height: 0px;
+	transition: height 0.3s ease;
+}
+.modalCatalog.entered {
+	height: 500px;
+	transition: height 0.3s ease;
+}
+.modalCatalog.exiting {
+	height: 0;
+	transition: height 0.3s ease;
+}
+.modalCatalog.exited {
+	height: 0;
+	transition: height 0.3s ease;
 }
