--- a/src/App.scss
+++ b/src/App.scss
@@ -14,8 +14,13 @@ body {
 }
 
 .main {
+	position: relative;
 	min-height: 100%;
 	flex: 1 1 auto;
+}
+
+.footer {
+	flex: 0 0 auto;
 }
 
 [class*="__container"] {
