--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -23,6 +23,8 @@
 		font-size: 1.4rem;
 		color: #242734;
 		cursor: pointer;
+		height: 4rem;
+		overflow: hidden;
 	}
 	button {
 		margin-top: 1.5rem;
