--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,6 +8,10 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		@media (max-width: 48em) {
+			flex-direction: column;
+			gap: 1rem;
+		}
 	}
 	&__menu {
 		display: flex;
