--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,43 @@
 		width: 13.3rem;
 		height: 2.7rem;
 	}
+	&__burger {
+		@media (max-width: 48em) {
+			display: block;
+		}
+		display: none;
+		width: 2.5rem;
+		height: 1.8rem;
+	}
+	&__search-mobile {
+		@media (max-width: 48em) {
+			display: block;
+		}
+		display: none;
+		position: relative;
+		width: 100%;
+		margin-top: 2rem;
+		input {
+			width: 100%;
+			height: 5.4rem;
+			background-color: #f6f6f6;
+			border: none;
+			text-indent: 4rem;
+			border: 1px solid #de3162;
+			border-radius: 0.9rem;
+			font-size: 1.5rem;
+		}
+		svg {
+			position: absolute;
+			top: 1.9rem;
+			left: 1.5rem;
+			width: 1.7rem;
+			height: 1.7rem;
+		}
+		path {
+			fill: gray;
+		}
+	}
 	&__upmenu {
 		background-color: #242734;
 		color: white;
@@ -21,6 +58,10 @@
 			grid-template-columns: repeat(4, max-content);
 			align-items: center;
 			gap: 3rem;
+			@media (max-width: 48em) {
+				display: flex;
+				justify-content: space-between;
+			}
 		}
 	}
 	&__search {
@@ -50,6 +91,9 @@
 				height: 2.5rem;
 			}
 		}
+		@media (max-width: 48em) {
+			display: none;
+		}
 	}
 	&__catalog {
 		display: flex;
@@ -68,6 +112,9 @@
 		display: flex;
 		gap: 3rem;
 		span {
+			@media (max-width: 48em) {
+				display: none;
+			}
 			font-size: 1.3rem;
 		}
 		button {
@@ -92,6 +139,9 @@
 	}
 }
 .catalog {
+	@media (max-width: 48em) {
+		display: none;
+	}
 	display: flex;
 	align-items: center;
 	gap: 0.7rem;
