--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -52,10 +52,15 @@
 	&__rating {
 		display: flex;
 		align-items: center;
-		gap: 0.5rem;
+
 		margin-top: 1rem;
+		svg {
+			width: 1.4rem;
+			height: 1.4rem;
+		}
 		span {
 			font-size: 1.4rem;
+			margin-left: 0.5rem;
 			color: #999999;
 		}
 	}
