--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -69,6 +69,11 @@
 		border-bottom: 0.1rem solid rgba(128, 128, 128, 0.24);
 		margin-bottom: 2rem;
 	}
+	&__info {
+		display: flex;
+		width: 35rem;
+		justify-content: space-between;
+	}
 	&__title {
 		font-size: 2.8rem;
 		font-weight: bold;
