--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,9 +5,28 @@
 		font-weight: bold;
 		margin-bottom: 4rem;
 	}
+	&__inputs {
+		display: flex;
+		gap: 2rem;
+		input {
+			height: 3.5rem;
+			border-radius: 0.4rem;
+			border: 0.1rem solid rgba(128, 128, 128, 0.49);
+			width: 20rem;
+			text-indent: 0.5rem;
+		}
+		button {
+			height: 3.5rem;
+			padding: 0 3.5rem;
+			background-color: #da2f58;
+			color: white;
+			border-radius: 0.4rem;
+			font-weight: 600;
+		}
+	}
 	&__block {
 		padding: 2rem;
-		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+		box-shadow: 0 0 1px rgba(0,0,0,.1), 0 0 30px rgba(19,40,71,.09);
 		margin-bottom: 2rem;
 		border-radius: 1rem;
 		h1 {
