--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -7,6 +7,17 @@
   &__table {
     width: 100%;
   }
+  &__buy {
+    padding: 1.2rem 2.5rem;
+    background-color: #da2f58;
+    color: white;
+    font-weight: bold;
+    border-radius: 0.4rem;
+  }
+  &__img {
+    width: 20rem;
+    object-fit: cover;
+  }
   &__price {
     display: flex;
     flex-direction: column;
@@ -48,4 +59,31 @@
       justify-content: space-between;
     }
   }
+}
+
+.cart__delete {
+  position: relative;
+  width: 2.4rem;
+  height: 2.4rem;
+  cursor: pointer;
+}
+
+.cart__delete::before,
+.cart__delete::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2.4rem;
+  height: 0.2rem;
+  background-color: #da2f58;
+  transform: translate(-50%, -50%);
+}
+
+.cart__delete::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.cart__delete::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
