--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -7,11 +7,13 @@
 		display: flex;
 		flex-wrap: wrap;
 		gap: 2rem;
+		width: max-content;
 	}
 	&__description {
 		display: flex;
 		flex-wrap: wrap;
 		gap: 5rem;
+		width: 60rem;
 		margin-top: 2rem;
 		h1 {
 			font-weight: 600;
@@ -46,6 +48,14 @@
 			font-weight: bold;
 			padding: 1.6rem 2.6rem;
 			font-size: 2rem;
+		}
+		input {
+			width: 5rem;
+			padding: 1.6rem 0;
+			text-align: center;
+			border-radius: 1rem;
+			border: 0.2rem solid #de3163;
+			font-weight: bold;
 		}
 		button:nth-child(2) {
 			color: #de3163;
@@ -92,6 +102,13 @@
 		svg {
 			width: 1.4rem;
 			height: 1.4rem;
+		}
+	}
+}
+.liked {
+	svg {
+		path{
+			fill: #da2f58;
 		}
 	}
 }
