--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,114 +1,134 @@
 .product {
-	margin-top: 4rem;
-	&__img {
-		width: 50rem;
-	}
-	&__main {
-		display: flex;
-		flex-wrap: wrap;
-		gap: 2rem;
-		width: max-content;
-	}
-	&__description {
-		display: flex;
-		flex-wrap: wrap;
-		gap: 5rem;
-		width: 60rem;
-		margin-top: 2rem;
-		h1 {
-			font-weight: 600;
-			font-size: 2.4rem;
-			margin-bottom: 1rem;
-		}
-	}
-	&__delivery {
-		margin-top: 1rem;
-		span {
-			font-weight: 600;
-		}
-	}
-	&__buttons {
-		margin-top: 4rem;
-		display: flex;
-		align-items: center;
-		gap: 1rem;
-		svg {
-			width: 2.5rem;
-			height: 2.5rem;
-		}
-		svg:hover {
-			path {
-				fill: #de3163;
-			}
-		}
-		button:first-child {
-			color: white;
-			background-color: #de3163;
-			border-radius: 1rem;
-			font-weight: bold;
-			padding: 1.6rem 2.6rem;
-			font-size: 2rem;
-		}
-		input {
-			width: 5rem;
-			padding: 1.6rem 0;
-			text-align: center;
-			border-radius: 1rem;
-			border: 0.2rem solid #de3163;
-			font-weight: bold;
-		}
-		button:nth-child(2) {
-			color: #de3163;
-			border: 0.2rem solid #de3163;
-			border-radius: 1rem;
-			font-weight: bold;
-			padding: 1.4rem 2.4rem;
-			font-size: 2rem;
-		}
-	}
-	&__price {
-		margin-top: 0.5rem;
-		font-weight: bold;
-		font-size: 3rem;
-	}
-	&__oldprice {
-		font-size: 2rem;
-		color: gray;
-		text-decoration: line-through;
-	}
-	&__head {
-		padding-bottom: 1rem;
-		border-bottom: 0.1rem solid rgba(128, 128, 128, 0.24);
-		margin-bottom: 2rem;
-	}
-	&__info {
-		display: flex;
+  margin-top: 4rem;
 
-		width: 35rem;
-		justify-content: space-between;
-	}
-	&__title {
-		font-size: 2.8rem;
-		font-weight: bold;
-	}
-	&__rate {
-		margin-top: 1.5rem;
-		display: flex;
-		align-items: center;
-		span {
-			margin-left: 0.5rem;
-			font-size: 1.4rem;
-		}
-		svg {
-			width: 1.4rem;
-			height: 1.4rem;
-		}
-	}
+  &__img {
+    width: 50rem;
+  }
+
+  &__main {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    width: max-content;
+  }
+
+  &__description {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+    width: 60rem;
+    margin-top: 2rem;
+
+    h1 {
+      font-weight: 600;
+      font-size: 2.4rem;
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__delivery {
+    margin-top: 1rem;
+
+    span {
+      font-weight: 600;
+    }
+  }
+
+  &__buttons {
+    margin-top: 4rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    svg {
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+
+    svg:hover {
+      path {
+        fill: #de3163;
+      }
+    }
+
+    button:first-child {
+      color: white;
+      background-color: #de3163;
+      border-radius: 1rem;
+      font-weight: bold;
+      padding: 1.6rem 2.6rem;
+      font-size: 2rem;
+    }
+
+    input {
+      width: 5rem;
+      padding: 1.6rem 0;
+      text-align: center;
+      border-radius: 1rem;
+      border: 0.2rem solid #de3163;
+      font-weight: bold;
+    }
+
+
+  }
+
+  &__price {
+    margin-top: 0.5rem;
+    font-weight: bold;
+    font-size: 3rem;
+  }
+
+  &__oldprice {
+    font-size: 2rem;
+    color: gray;
+    text-decoration: line-through;
+  }
+
+  &__head {
+    padding-bottom: 1rem;
+    border-bottom: 0.1rem solid rgba(128, 128, 128, 0.24);
+    margin-bottom: 2rem;
+  }
+
+  &__info {
+    display: flex;
+
+    width: 35rem;
+    justify-content: space-between;
+  }
+
+  &__title {
+    font-size: 2.8rem;
+    font-weight: bold;
+  }
+
+  &__rate {
+    margin-top: 1.5rem;
+    display: flex;
+    align-items: center;
+
+    span {
+      margin-left: 0.5rem;
+      font-size: 1.4rem;
+    }
+
+    svg {
+      width: 1.4rem;
+      height: 1.4rem;
+    }
+  }
 }
+
 .liked {
-	svg {
-		path{
-			fill: #da2f58;
-		}
-	}
+  color: #de3163 !important;
+  border: 0.2rem solid #de3163 !important;
+}
+
+.favourite-btn {
+  color: gray;
+  border: 0.2rem solid gray;
+  border-radius: 1rem;
+  font-weight: bold;
+  padding: 1.4rem 2.4rem;
+  font-size: 2rem;
 }
