--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -1,83 +1,106 @@
 .products {
-	&__list {
-		display: flex;
-		flex-wrap: wrap;
-		gap: 1rem;
-		margin: 0 auto;
-	}
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 0 auto;
+  }
 }
 
 .star-full {
-	path {
-		fill: #de3163;
-		stroke: #de3163;
-	}
+  path {
+    fill: #de3163;
+    stroke: #de3163;
+  }
 }
 
 .card {
-	width: 29rem;
-	height: 55.7rem;
-	padding: 2rem 2rem 0 2rem;
-	&__title {
-		margin-top: 0.5rem;
-		font-size: 1.4rem;
-		color: #242734;
-		cursor: pointer;
-		height: 4rem;
-		overflow: hidden;
-	}
-	button {
-		margin-top: 1.5rem;
-		font-size: 1.6rem;
-		padding: 1rem 2.2rem;
-		border-radius: 0.9rem;
-		font-weight: bold;
-		color: white;
-		background-color: #de3163;
-	}
-	&__rating-stars {
-		display: flex;
-		svg {
-			width: 1.4rem;
-			height: 1.4rem;
-		}
-	}
-	&__img {
-		img {
-			width: 25.2rem;
-			height: 33.6rem;
-			object-fit: cover;
-		}
-	}
-	&__rating {
-		display: flex;
-		align-items: center;
+  width: 29rem;
+  height: 55.7rem;
+  padding: 2rem 2rem 0 2rem;
 
-		margin-top: 1rem;
-		svg {
-			width: 1.4rem;
-			height: 1.4rem;
-		}
-		span {
-			font-size: 1.4rem;
-			margin-left: 0.5rem;
-			color: #999999;
-		}
-	}
-	&__price {
-		display: flex;
-		gap: 0.8rem;
-		align-items: center;
-	}
-	&__current-price {
-		font-weight: bold;
-		font-size: 1.8rem;
-		color: #242424;
-	}
-	&__old-price {
-		font-size: 1.4rem;
-		color: #8b8b8b;
-		text-decoration: line-through;
-		font-weight: bold;
-	}
+  &__title {
+    margin-top: 0.5rem;
+    font-size: 1.4rem;
+    color: #242734;
+    cursor: pointer;
+    height: 4rem;
+    overflow: hidden;
+  }
+
+  button {
+    margin-top: 1.5rem;
+    font-size: 1.6rem;
+    padding: 1rem 2.2rem;
+    border-radius: 0.9rem;
+    font-weight: bold;
+    color: white;
+    background-color: #de3163;
+  }
+
+  &__rating-stars {
+    display: flex;
+
+    svg {
+      width: 1.4rem;
+      height: 1.4rem;
+    }
+  }
+
+  &__img {
+    position: relative;
+    .card__discount {
+      position: absolute;
+      background-color: #fdeef9;
+      border-radius: .8rem;
+      padding: .5rem .7rem;
+      font-weight: bold;
+      color: #de3162;
+      top: 85%;
+      left: 0;
+    }
+
+    img {
+      width: 25.2rem;
+      height: 33.6rem;
+      object-fit: contain;
+    }
+  }
+
+  &__rating {
+    display: flex;
+    align-items: center;
+
+    margin-top: 1rem;
+
+    svg {
+      width: 1.4rem;
+      height: 1.4rem;
+    }
+
+    span {
+      font-size: 1.4rem;
+      margin-left: 0.5rem;
+      color: #999999;
+    }
+  }
+
+  &__price {
+    display: flex;
+    gap: 0.8rem;
+    align-items: center;
+  }
+
+  &__current-price {
+    font-weight: bold;
+    font-size: 1.8rem;
+    color: #242424;
+  }
+
+  &__old-price {
+    font-size: 1.4rem;
+    color: #8b8b8b;
+    text-decoration: line-through;
+    font-weight: bold;
+  }
 }
