--- a/src/components/Entity/AddEditForm.scss
+++ b/src/components/Entity/AddEditForm.scss
@@ -18,6 +18,13 @@
       border: 0.1rem solid #ccc;
       text-indent: 0.5rem;
     }
+    select {
+      height: 4rem;
+      border-radius: 0.4rem;
+      border: 0.1rem solid #ccc;
+      background-color: white;
+    }
+
   }
   button {
     background-color: #4caf50;
@@ -29,4 +36,45 @@
       background-color: #45a049;
     }
   }
+}
+.form-images {
+  input {
+    margin: 1rem 0;
+  }
+  button {
+    margin: 1rem 0;
+  }
+
+}
+
+.file-input-wrapper {
+    position: relative;
+    display: inline-block;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+}
+
+.file-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.file-input-label {
+    display: inline-block;
+    padding: 0.8rem 1.2rem;
+    background-color: #f1f1f1;
+    border: 0.1rem solid #ccc;
+    border-radius: 0.4rem;
+  width: 100%;
+  text-align: center;
+    cursor: pointer;
+}
+
+.file-input-wrapper:hover .file-input-label {
+    background-color: #e1e1e1;
 }
