--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -24,6 +24,7 @@
     text-align: start;
     font-size: 2rem;
     font-weight: 600;
+    width: 8.5rem;
     span {
       font-weight: normal;
       color: gray;
@@ -42,6 +43,7 @@
   &__name {
     display: flex;
     flex-direction: column;
+    width: 40.5rem;
     span {
       font-weight: normal;
       color: gray;
