--- a/src/components/Entity/AddEditForm.scss
+++ b/src/components/Entity/AddEditForm.scss
@@ -6,12 +6,18 @@
     font-weight: 600;
     margin-bottom: 2rem;
   }
+  form {
+    height: 80rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    flex-wrap: wrap;
+  }
   label {
   }
   .form-item {
     display: flex;
     flex-direction: column;
-    margin-bottom: 2rem;
     input {
       height: 4rem;
       border-radius: 0.4rem;
@@ -32,6 +38,7 @@
     color: white;
     font-weight: 600;
     border-radius: 0.4rem;
+    text-align: center;
     &:hover {
       background-color: #45a049;
     }
