--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -131,3 +131,8 @@
   padding: 1.4rem 2.4rem;
   font-size: 2rem;
 }
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
