--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -1,10 +1,48 @@
+.header--scrolled {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.hidden {
+  display: none !important;
+}
+
+.cart-badge {
+
+  position: absolute;
+  top: -1rem;
+  right: 0;
+  background-color: #de3163;
+  color: white;
+  padding: 0.4rem;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &__count {
+    font-size: 1.3rem;
+  }
+}
+
 .header {
   font-size: 1.8rem;
   position: relative;
-
+  background-color: white;
+  transition: top 0.3s ease;
   &__logo {
     width: 13.3rem;
     height: 2.7rem;
+  }
+
+  &__cart {
+    position: relative;
   }
 
   &__burger {
@@ -33,7 +71,6 @@
       width: 100%;
       height: 5.4rem;
       background-color: #f6f6f6;
-      border: none;
       text-indent: 4rem;
       border: 1px solid #de3162;
       border-radius: 0.9rem;
