--- a/src/assets/styles/normalize.scss
+++ b/src/assets/styles/normalize.scss
@@ -13,7 +13,6 @@ html {
 	padding: 0;
 }
 
-
 body {
 	font-style: normal;
 	font-weight: normal;
@@ -127,4 +126,5 @@ h1 {
 	font-size: 3.2rem;
 	font-weight: bold;
 	margin: 4rem 0;
+	line-height: 4.8rem;
 }
